--- a/index.html
+++ b/index.html
@@ -3,230 +3,188 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>North South University - Tentative Academic Calendar Fall 2025</title>
-    <!-- Bootstrap CSS CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+        :root {
+            --nsu-blue: #004a99;
+            --nsu-light-blue: #eef5ff;
+            --holiday-yellow: #fff9c4;
+            --critical-red: #d32f2f;
+            --success-green: #2e7d32;
+            --border-color: #cfd8dc;
+            --text-main: #263238;
+        }
+
         body {
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            font-family: 'Arial', sans-serif;
-            color: #333;
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.5;
+            color: var(--text-main);
+            background-color: #f4f7f9;
+            margin: 0;
+            padding: 20px;
         }
-        .header {
-            background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
-            color: #fff;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+        .calendar-container {
+            max-width: 950px;
+            margin: 0 auto;
+            background: white;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
         }
-        .table-custom {
-            background-color: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
-        .table-custom th {
-            background: linear-gradient(135deg, #3498db 0%, #2c3e50 100%);
-            color: #fff;
-            font-weight: bold;
-        }
-        .table-custom td {
-            vertical-align: middle;
-        }
-        .highlight-green {
-            background: linear-gradient(135deg, #2ecc71 0%, #27ae60 100%);
-            color: #fff;
-            font-weight: bold;
-        }
-        .highlight-yellow {
-            background: linear-gradient(135deg, #f1c40f 0%, #e67e22 100%);
-            color: #fff;
-            font-weight: bold;
-        }
-        .footer-note {
-            font-size: 0.875rem;
-            color: #7f8c8d;
-            background: #ecf0f1;
-            padding: 0.5rem;
-            border-radius: 5px;
+
+        header {
             text-align: center;
+            border-bottom: 3px solid var(--nsu-blue);
+            margin-bottom: 30px;
+            padding-bottom: 20px;
         }
-        .event-important {
+
+        header h1 {
+            margin: 0;
+            color: var(--nsu-blue);
+            font-size: 28px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        header h2 {
+            margin: 5px 0;
+            font-weight: 400;
+            color: #546e7a;
+        }
+
+        .meta-info {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 15px;
+            font-weight: 600;
+            font-size: 0.9em;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 30px;
+        }
+
+        th {
+            background-color: var(--nsu-blue);
+            color: white;
+            text-align: left;
+            padding: 12px 15px;
+            font-weight: 600;
+            text-transform: uppercase;
+            font-size: 0.85em;
+        }
+
+        td {
+            padding: 12px 15px;
+            border-bottom: 1px solid var(--border-color);
+            font-size: 0.95em;
+        }
+
+        tr:nth-child(even) {
+            background-color: #fafafa;
+        }
+
+        /* Specialized Row Styles */
+        .row-start-class {
+            background-color: #e8f5e9 !important;
             font-weight: bold;
-            color: #e74c3c;
+            color: var(--success-green);
+            border-left: 5px solid var(--success-green);
+        }
+
+        .row-holiday {
+            background-color: var(--holiday-yellow) !important;
+            font-style: italic;
+        }
+
+        .row-exam {
+            background-color: #fff3e0 !important;
+            font-weight: bold;
+            color: #e65100;
+        }
+
+        .date-col { width: 15%; white-space: nowrap; font-weight: 600; }
+        .day-col { width: 15%; color: #78909c; }
+        .event-col { width: 70%; }
+
+        footer {
+            margin-top: 30px;
+            padding-top: 20px;
+            border-top: 1px solid var(--border-color);
+            font-size: 0.85em;
+            color: #78909c;
+            display: flex;
+            justify-content: space-around;
+        }
+
+        .legend {
+            font-weight: bold;
+            color: var(--nsu-blue);
+        }
+
+        @media print {
+            body { background: white; padding: 0; }
+            .calendar-container { box-shadow: none; width: 100%; }
         }
     </style>
+    <title>NSU Academic Calendar Spring 2026</title>
 </head>
-<body class="container my-5">
-    <div class="header text-center mb-4">
-        <h2>North South University</h2>
-        <h4>Tentative Academic Calendar</h4>
-        <p class="lead">21 Aug 2025</p>
+<body>
+
+<div class="calendar-container">
+    <header>
+        <h1>North South University</h1>
+        <h2>Tentative Academic Calendar: Spring 2026</h2>
+    </header>
+
+    <div class="meta-info">
+        <span>Updated: 30 Dec 2025</span>
+        <span>Spring Semester</span>
     </div>
-    <h3 class="text-center mb-4 text-primary">Fall 2025</h3>
-    <table class="table table-bordered table-hover table-custom">
+
+    <table>
         <thead>
             <tr>
-                <th>Date</th>
-                <th>Day</th>
-                <th>Event</th>
+                <th class="date-col">Date</th>
+                <th class="day-col">Day</th>
+                <th class="event-col">Event Description</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>6-Sep-25</td>
-                <td>Saturday</td>
-                <td>Last day of grade submission Summer 2025</td>
-            </tr>
-            <tr>
-                <td>9-Sep-25</td>
-                <td>Tuesday</td>
-                <td>On-campus course registration for newly admitted students of Fall 2025</td>
-            </tr>
-            <tr>
-                <td>10-Sep-25</td>
+            <tr><td>31-Dec-25</td><td>Wednesday</td><td>Last day of grade submission Fall 2025</td></tr>
+            <tr><td>11-Jan-26</td><td>Sunday</td><td>On-Campus registration for newly admitted students: BEGINS</td></tr>
+            <tr><td>12-Jan-26</td><td>Monday</td><td>Online course registration for regular/probation students: BEGINS</td></tr>
+            <tr><td>17-Jan-26</td><td>Saturday</td><td><strong>Orientation Program</strong> (Newly admitted undergraduate students)</td></tr>
+            <tr><td>19-Jan-26</td><td>Monday</td><td>Registration & Drop/Add/Section Change: ENDS</td></tr>
+            <tr class="row-start-class">
+                <td>21-Jan-26</td>
                 <td>Wednesday</td>
-                <td>Online course registration for regular and probation students of Fall 2025: BEGINS<br>Online course add/drop / section change: BEGINS</td>
+                <td>CLASSES BEGIN / Payment of tuition fee: BEGINS</td>
             </tr>
-            <tr>
-                <td>16-Sep-25</td>
-                <td>Tuesday</td>
-                <td>Online course registration for regular and probation students of Fall 2025: ENDS<br>Online course add/drop / section change: ENDS</td>
-            </tr>
-            <tr>
-                <td>17-Sep-25</td>
-                <td>Wednesday</td>
-                <td>Last day of section cancellation and merging<br>Tentative Orientation Program for newly admitted undergraduate students of Fall 2025</td>
-            </tr>
-            <tr class="highlight-green">
-                <td>18-Sep-25</td>
-                <td>Thursday</td>
-                <td class="event-important">Classes begin (Fall 2025)<br>Payment of tuition fee: BEGINS</td>
-            </tr>
-            <tr>
-                <td>28-Sep-25</td>
-                <td>Sunday</td>
-                <td>Last day of online drop of courses with 100% refund</td>
-            </tr>
-            <tr class="highlight-yellow">
-                <td>29-Sep-25</td>
-                <td>Monday</td>
-                <td>No Classes</td>
-            </tr>
-            <tr class="highlight-yellow">
-                <td>30-Sep-25</td>
-                <td>Tuesday</td>
-                <td>No Classes</td>
-            </tr>
-            <tr class="highlight-yellow">
-                <td>1-Oct-25</td>
-                <td>Wednesday</td>
-                <td>Holiday- Durga Puja</td>
-            </tr>
-            <tr class="highlight-yellow">
-                <td>2-Oct-25</td>
-                <td>Thursday</td>
-                <td>Holiday- Durga Puja</td>
-            </tr>
-            <tr class="highlight-yellow">
-                <td>3-Oct-25</td>
-                <td>Friday</td>
-                <td>No Classes</td>
-            </tr>
-            <tr>
-                <td>8-Oct-25</td>
-                <td>Wednesday</td>
-                <td>Last day of online drop of courses with 50% refund</td>
-            </tr>
-            <tr>
-                <td>15-Oct-25</td>
-                <td>Wednesday</td>
-                <td>Last day of payment of tuition without a late fee</td>
-            </tr>
-            <tr>
-                <td>16-Oct-25</td>
-                <td>Thursday</td>
-                <td>Payment of tuition with a late fee of Tk. 2,000/-: BEGINS</td>
-            </tr>
-            <tr>
-                <td>28-Oct-25</td>
-                <td>Tuesday</td>
-                <td>Last day of payment of tuition with a late fee of Tk. 2000/-</td>
-            </tr>
-            <tr>
-                <td>29-Oct-25</td>
-                <td>Wednesday</td>
-                <td>Payment of tuition fee with a late fee of Tk. 2,000/- +Tk. 100/- per day: BEGINS</td>
-            </tr>
-            <tr>
-                <td>30-Oct-25</td>
-                <td>Thursday</td>
-                <td>Last day of online drop of courses with 0% refund with "W" grade</td>
-            </tr>
-            <tr>
-                <td>2-Nov-25</td>
-                <td>Sunday</td>
-                <td>Last day of payment of tuition for financial aid recipients without a late fee</td>
-            </tr>
-            <tr>
-                <td>6-Nov-25</td>
-                <td>Thursday</td>
-                <td>Online Teaching Evaluation: BEGINS</td>
-            </tr>
-            <tr>
-                <td>11-Dec-25</td>
-                <td>Thursday</td>
-                <td>Last day of RA classes</td>
-            </tr>
-            <tr>
-                <td>13-Dec-25</td>
-                <td>Saturday</td>
-                <td>Regular MW classes</td>
-            </tr>
-            <tr>
-                <td>14-Dec-25</td>
-                <td>Sunday</td>
-                <td>Last day of ST classes</td>
-            </tr>
-            <tr>
-                <td>15-Dec-25</td>
-                <td>Monday</td>
-                <td>Last day of MW classes, Online Teaching Evaluation: ENDS</td>
-            </tr>
-            <tr class="highlight-yellow">
-                <td>16-Dec-25</td>
-                <td>Tuesday</td>
-                <td>Holiday- Victory Day</td>
-            </tr>
-            <tr class="highlight-yellow">
-                <td>17-Dec-25</td>
-                <td>Wednesday</td>
-                <td>No classes</td>
-            </tr>
-            <tr>
-                <td>18-Dec-25</td>
-                <td>Thursday</td>
-                <td>Final Exam: BEGINS</td>
-            </tr>
-            <tr>
-                <td>24-Dec-25</td>
-                <td>Wednesday</td>
-                <td>Final Exam: ENDS</td>
-            </tr>
-            <tr class="highlight-yellow">
-                <td>25-Dec-25</td>
-                <td>Thursday</td>
-                <td>Holiday- Christmas Day</td>
-            </tr>
-            <tr>
-                <td>29-Dec-25</td>
-                <td>Monday</td>
-                <td>Last day of grade submission Fall 2025</td>
-            </tr>
+            <tr class="row-holiday"><td>04-Feb-26</td><td>Wednesday</td><td>Holiday: Shab-E-Barat</td></tr>
+            <tr><td>16-Feb-26</td><td>Monday</td><td>Last day of payment of tuition without late fee</td></tr>
+            <tr class="row-holiday"><td>21-Feb-26</td><td>Saturday</td><td>Holiday: Martyrs Day & International Mother Language Day</td></tr>
+            <tr class="row-holiday"><td>17-Mar-26</td><td>Tuesday</td><td>Holiday: Laylatul Qadr</td></tr>
+            <tr class="row-holiday"><td>19-23 Mar</td><td>Thu-Mon</td><td>Holiday: Eid Ul Fitr (Subject to moon sighting)</td></tr>
+            <tr class="row-holiday"><td>26-Mar-26</td><td>Thursday</td><td>Holiday: Independence Day</td></tr>
+            <tr class="row-holiday"><td>14-Apr-26</td><td>Tuesday</td><td>Holiday: Bangla New Year</td></tr>
+            <tr><td>25-Apr-26</td><td>Saturday</td><td>Last day of RA Classes (Thursday-Saturday)</td></tr>
+            <tr><td>28-Apr-26</td><td>Tuesday</td><td>Last day of ST Classes (Sunday-Tuesday)</td></tr>
+            <tr class="row-exam"><td>02-May-26</td><td>Saturday</td><td>Final Exams: BEGINS</td></tr>
+            <tr class="row-exam"><td>08-May-26</td><td>Friday</td><td>Final Exams: ENDS</td></tr>
+            <tr><td>12-May-26</td><td>Tuesday</td><td>Last day of grade submission Spring 2026</td></tr>
         </tbody>
     </table>
-    <p class="footer-note">ST=Sunday-Tuesday, MW=Monday-Wednesday, RA=Thursday-Saturday</p>
-    <!-- Bootstrap JS CDN (optional for interactivity) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <footer>
+        <div><span class="legend">ST:</span> Sunday-Tuesday</div>
+        <div><span class="legend">MW:</span> Monday-Wednesday</div>
+        <div><span class="legend">RA:</span> Thursday-Saturday</div>
+    </footer>
+</div>
+
 </body>
 </html>
